# Financial_Statement_Analysis_POC_Crewai

./: .env  .gitignore  Chunk.py  FS_Agentic_RAG.py  FS_Preperation.py  GEMINI.md  README.md  crew_fs.py  prompts.py  pyproject.toml  test.py
backend/: .env  financial_analysis_complete.json  pyproject.toml  streamlitapp.py
backend/faiss_index/: index.pkl
backend/knowledge/markdowns/: HSBC_output.md  Invest_Bank_output.md  egypt_publish_f_s_dec_2024_separate_en_q4.html  egypt_publish_f_s_dec_2024_separate_en_q4_chunks.md
backend/src/financial_statement_analysis/: api.py  crew.py  crew_improved.py  ingest.py  main.py  test.py
backend/src/financial_statement_analysis/config/: agents.yaml  tasks.yaml
backend/src/financial_statement_analysis/output/processed_docs/: HSBC-11.json  HSBC-11.md
backend/src/financial_statement_analysis/tools/: vectorstore_load.py
backend/src/financial_statement_analysis/utils/: Chunk.py  docling_loader_example.py  document_chunker.py  document_processor.py  langfuse_config.py  pydantic_models.py  test.py  vectorstore_save.py
faiss_index/: index.faiss
src/financial_statement_analysis/config/: agents.yaml
src/financial_statement_analysis/tools/: rag_tool.py
